2004-11-15  Pat Thoyts  <pat@zsplat.freeserve.co.uk>

	* all: Initial checkin.